--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
         <div class="container">
             <section class="product-list">
                 <div class="product-item">
+                    <img src="ChatGPT Image Apr 9, 2025, 11_07_34 PM.png" alt="Free Fire Logo" style="width: 300px;">
                     <img src="ChatGPT Image Apr 9, 2025, 11_07_34 PM.png" alt="Product 1">
                     <h3>Aim Drag Safe</h3>
                     <p>$15.00</p>
